feat(api): log the refusals the API answers with
A 404 or a 409 left through the advice and vanished: one of them is
ordinary and means nothing, but a rate of them means a great deal and
there was no way to see one. Every refusal now leaves a line naming the
route, the status and the exception, tied by the request id to the
response the caller was given.

Not the exception's message, though. The framework's own carry the
request back inside them — MethodArgumentNotValidException prints every
value it rejected, and through /api/auth one of those is the password.
A test drives that exact refusal and holds the log to not containing it;
with the message logged instead, it fails on `rejected value [s3cr3t]`.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>